[gd_scene load_steps=4 format=2]

[ext_resource path="res://themes/sub_theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/controllers/error_controller.gd" type="Script" id=2]
[ext_resource path="res://ui/components/v_gradient.tscn" type="PackedScene" id=7]

[node name="ErrorController" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Container" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Info" type="VBoxContainer" parent="Container"]
margin_right = 47.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spacing" type="Control" parent="Container/Info"]
margin_right = 1024.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )

[node name="Label" type="Label" parent="Container/Info"]
margin_top = 19.0
margin_right = 1024.0
margin_bottom = 39.0
size_flags_horizontal = 3
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit"
align = 1
valign = 1
autowrap = true

[node name="Spacing2" type="Control" parent="Container/Info"]
margin_top = 43.0
margin_right = 1024.0
margin_bottom = 48.0
rect_min_size = Vector2( 0, 5 )

[node name="Command" type="HBoxContainer" parent="Container/Info"]
margin_top = 52.0
margin_right = 1024.0
margin_bottom = 82.0

[node name="RichTextLabel" type="RichTextLabel" parent="Container/Info/Command"]
margin_right = 977.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_following = true

[node name="Copy" type="Button" parent="Container/Info/Command"]
margin_left = 981.0
margin_right = 1024.0
margin_bottom = 30.0
theme = ExtResource( 1 )
text = "  Copy  "

[node name="TopGradient" parent="." instance=ExtResource( 7 )]
flip_v = true

[node name="BottomGradient" parent="." instance=ExtResource( 7 )]
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[connection signal="pressed" from="Container/Info/Command/Copy" to="." method="_on_Copy_pressed"]
